# energy-stats

./: .gitignore  LICENSE  README.md  main.py  manage.py  project-overview.md  pyproject.toml
.cursor/rules/: project-overview-always-read.mdc
core/: admin.py  models.py  tests.py  urls.py  views.py
core/management/commands/: backfill_country_tracker_years.py  extract_ember.py  extract_iea_energy_balances.py  load_country_energy_balance.py  load_data.py  load_monthly_records.py  railway_deploy.py  railway_etl_pipeline.py  transform_and_load.py
core/migrations/: 0001_initial.py  0002_alter_monthlygenerationdata_country_code.py  0003_add_country_model.py  0004_add_fuel_model.py  0005_add_country_fuel_model.py  0006_country_latest_month.py  0007_country_low_carbon_pct.py  0008_countryfuel_annual_yoy_growth_and_more.py  0009_countryfuel_generation_latest_month_and_more.py  0010_countryfuelyear.py  0011_fuel_generation_all_time.py  0012_fuel_generation_latest_12_months.py  0013_fuel_top_country_generation_fuel_top_country_share.py  0014_fuelyear.py  0015_monthlygenerationrecord.py  0016_country_energy_balance_year.py  0017_countrytrackeryear.py  0018_remove_country_low_carbon_pct_and_more.py  0019_countrytrackeryear_generation_twh_and_more.py  0020_alter_country_share_low_carbon.py  0021_trackeryear.py  0022_fuelmonth.py  0023_fuelmonth_country_count.py
core/tests/: test_robots_txt.py  test_url_exposure.py
data/: canada-ev-list-2025.csv  ei-world-consolidated-panel-filtered-2024.csv  fuel-summaries.json  iea-test-energy-balances-2025.csv  iea-world-energy-balances-2025-filtered.csv  preprocess_ei_data.py  preprocess_iea_data.py  requirements.txt
energystats/: asgi.py  settings.py  urls.py  wsgi.py
energystats/tasks/: load_ember.py
(+20 files in other folders)
