[project]
name = "energy-stats"
version = "0.1.0"
description = "Energy and electricity stats for countries around the world."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "django>=6.0.2",
    "psycopg[binary]>=3.2.10",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "dj-database-url>=2.3.0",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# W291: trailing whitespace
# W293: blank line contains whitespace
select = [
    "W",   # pycodestyle warnings (includes W291, W293 for trailing whitespace)
    "E",   # pycodestyle errors
    "F",   # pyflakes
]
# Don't ignore trailing whitespace - we want to catch these!
ignore = []

[tool.ruff.lint.per-file-ignores]
"core/migrations/*" = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
